SUBDIRS = ext

docdir = $(prefix)/share/doc/1oom

doc_DATA = \
    example_pbxin.txt \
    format_gam.txt \
    format_lbx.txt \
    format_moo.txt \
    format_pbx.txt \
    format_save.txt \
    lbxmd5.txt \
    list_pbxnum.txt \
    usage_classic.txt \
    usage_cmdline.txt \
    usage_common.txt \
    usage_gfxconv.txt \
    usage_lbxview.txt \
    usage_pbxmake.txt \
    usage_saveconv.txt

EXTRA_DIST = $(doc_DATA)
