DIST_SUBDIRS = ext

docdir = $(prefix)/share/doc/1oom

doc_DATA = \
    format_gam.txt \
    format_lbx.txt \
    format_moo.txt \
    format_pbx.txt \
    format_save.txt \
    lbxmd5.txt \
    list_gamediff.txt \
    list_pbxnum.txt \
    pbxin_example.txt \
    pbxin_fixbugs.txt \
    usage_classic.txt \
    usage_cmdline.txt \
    usage_common.txt \
    usage_gfxconv.txt \
    usage_lbxedit.txt \
    usage_lbxview.txt \
    usage_pbxdump.txt \
    usage_pbxmake.txt \
    usage_saveconv.txt

EXTRA_DIST = $(doc_DATA)
