AM_CPPFLAGS = \
    @OS_INCLUDES@ \
    -I$(top_srcdir)/src \
    -I$(top_srcdir)/src/save

noinst_LIBRARIES = libgame.a libgamemain.a libgamesaveconv.a

libgamemain_a_SOURCES = \
    game.c

libgame_a_SOURCES = \
    game.h \
    game_ai.c \
    game_ai.h \
    game_ai_classic.c \
    game_ai_classic.h \
    game_audience.c \
    game_audience.h \
    game_aux.c \
    game_aux.h \
    game_battle.c \
    game_battle.h \
    game_battle_human.c \
    game_battle_human.h \
    game_design.c \
    game_design.h \
    game_diplo.c \
    game_diplo.h \
    game_election.c \
    game_election.h \
    game_end.h \
    game_event.c \
    game_event.h \
    game_fix.c \
    game_fix.h \
    game_fleet.c \
    game_fleet.h \
    game_ground.c \
    game_ground.h \
    game_misc.c \
    game_misc.h \
    game_new.c \
    game_new.h \
    game_news.c \
    game_news.h \
    game_num.c \
    game_num.h \
    game_parsed.c \
    game_parsed.h \
    game_planet.c \
    game_planet.h \
    game_shipdesign.c \
    game_shipdesign.h \
    game_shiptech.c \
    game_shiptech.h \
    game_spy.c \
    game_spy.h \
    game_stat.c \
    game_stat.h \
    game_str.c \
    game_str_shipnames.c \
    game_str.h \
    game_tech.c \
    game_tech.h \
    game_techtypes.h \
    game_turn.c \
    game_turn.h \
    game_types.h \
    game_util.c \
    game_util.h

libgamesaveconv_a_SOURCES = \
    game_str_shipnames.c \
    game_str.h
