AM_CPPFLAGS = \
    @OS_INCLUDES@ \
    -I$(top_srcdir)/src/game \
    -I$(top_srcdir)/src

noinst_LIBRARIES = libuiclassic.a

libuiclassic_a_SOURCES = \
    uiaudience.c \
    uibasescrap.c \
    uibasescrap.h \
    uibattle.c \
    uibattlepre.c \
    uibattlepre.h \
    uibomb.c \
    uicaught.c \
    uicaught.h \
    uiclassic.c \
    uicopyprotection.c \
    uicursor.c \
    uicursor.h \
    uidefs.h \
    uidelay.c \
    uidelay.h \
    uidesign.c \
    uidesign.h \
    uidraw.c \
    uidraw.h \
    uielection.c \
    uiempirereport.c \
    uiempirereport.h \
    uiempirestatus.c \
    uiempirestatus.h \
    uiending.c \
    uiexplore.c \
    uifleet.c \
    uifleet.h \
    uigame.c \
    uigameopts.c \
    uigameopts.h \
    uigmap.c \
    uigmap.h \
    uiground.c \
    uihelp.c \
    uihelp.h \
    uiintro.c \
    uilanding.c \
    uilanding.h \
    uiload.c \
    uiload.h \
    uimainmenu.c \
    uinewgame.c \
    uinewgame.h \
    uinews.c \
    uinews.h \
    uinewships.c \
    uinewtech.c \
    uiobj.c \
    uiobj.h \
    uipal.c \
    uipal.h \
    uiplanets.c \
    uiplanets.h \
    uiraces.c \
    uiraces.h \
    uisave.c \
    uisave.h \
    uisearch.c \
    uisearch.h \
    uisound.c \
    uisound.h \
    uispecs.c \
    uispecs.h \
    uispy_esp.c \
    uispy_sab.c \
    uistarmap.c \
    uistarmap.h \
    uistarmap_common.c \
    uistarmap_common.h \
    uistarmap_enroute.c \
    uistarmap_orbit_en.c \
    uistarmap_orbit_own.c \
    uistarmap_reloc.c \
    uistarmap_ships.c \
    uistarmap_trans.c \
    uistarmap_transport.c \
    uistarview.c \
    uistarview.h \
    uiswitch.c \
    uiswitch.h \
    uitech.c \
    uitech.h \
    uiturn.c
