AM_CPPFLAGS = \
    -I$(top_srcdir)/src/save \
    -I$(top_srcdir)/src/game \
    -I$(top_srcdir)/src

noinst_LIBRARIES = libuicmdline.a

libuicmdline_a_SOURCES = \
    uiaudience.c \
    uibattle.c \
    uibomb.c \
    uicmdline.c \
    uidefs.h \
    uielection.c \
    uiending.c \
    uiexplore.c \
    uifleet.c \
    uifleet.h \
    uigame.c \
    uigmap.c \
    uiground.c \
    uihelp.c \
    uihelp.h \
    uiinput.c \
    uiinput.h \
    uiintro.c \
    uiload.c \
    uiload.h \
    uimainmenu.c \
    uinews.c \
    uinewtech.c \
    uiplanet.c \
    uiplanet.h \
    uiraces.c \
    uiraces.h \
    uispy_esp.c \
    uispy_sab.c
