AM_CPPFLAGS = \
    -I$(top_srcdir)/src/save \
    -I$(top_srcdir)/src/game \
    -I$(top_srcdir)/src

noinst_LIBRARIES = libuicmdline.a

libuicmdline_a_SOURCES = \
    uiaudience.c \
    uibattle.c \
    uibomb.c \
    uicheat.c \
    uicheat.h \
    uicmdline.c \
    uicmds.c \
    uicmds.h \
    uidefs.h \
    uidesign.c \
    uidesign.h \
    uielection.c \
    uiempire.c \
    uiempire.h \
    uiempirereport.c \
    uiempirereport.h \
    uiempirestats.c \
    uiempirestats.h \
    uiending.c \
    uiexplore.c \
    uifleet.c \
    uifleet.h \
    uigame.c \
    uigmap.c \
    uiground.c \
    uihelp.c \
    uihelp.h \
    uiinput.c \
    uiinput.h \
    uiintro.c \
    uiload.c \
    uiload.h \
    uimainmenu.c \
    uinews.c \
    uinewtech.c \
    uiplanet.c \
    uiplanet.h \
    uiraces.c \
    uiraces.h \
    uisave.c \
    uisave.h \
    uispecs.c \
    uispecs.h \
    uispy_esp.c \
    uispy_sab.c \
    uiswitch.c \
    uiswitch.h \
    uitech.c \
    uitech.h \
    uiview.c \
    uiview.h
