AM_CPPFLAGS = \
    -I$(top_srcdir)/src/save \
    -I$(top_srcdir)/src/game \
    -I$(top_srcdir)/src

noinst_LIBRARIES = libuicmdline.a

libuicmdline_a_SOURCES = \
    uibattle.c \
    uicmdline.c \
    uigame.c \
    uigmap.c \
    uiinput.c \
    uiinput.h \
    uiload.c \
    uiload.h \
    uimainmenu.c
