AM_CFLAGS=@HW_SDL2_CFLAGS@

AM_CPPFLAGS = \
    -I$(top_srcdir)/src \
    -I$(top_srcdir)/src/hw/sdl

noinst_LIBRARIES = libhwsdl2.a

libhwsdl2_a_SOURCES = \
    hwsdl2_common.c \
    hwsdl2_event.c \
    hwsdl2_init.c \
    hwsdl2_keymap.h \
    hwsdl2_opt.c \
    hwsdl2_video_buffers.c \
    hwsdl2_video_buffers.h \
    hwsdl2_video_texture.c \
    hwsdl2_video_texture.h \
    hwsdl2_window.c \
    hwsdl2_window.h \
    hwsdl2_window_icon.c \
    hwsdl2_window_icon.h
